[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/Main.gd" type="Script" id=1]
[ext_resource path="res://Scens/Ui/SettingsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scens/Ui/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scens/Ui/SceneTransitionRect.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIVideoSettings" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="SceneTransitionRect" parent="." instance=ExtResource( 4 )]

[connection signal="apply_button_pressed" from="CanvasLayer/UIVideoSettings" to="." method="_on_UIVideoSettings_apply_button_pressed"]
[connection signal="escape_settings" from="CanvasLayer/UIVideoSettings" to="." method="_on_UIVideoSettings_escape_settings"]
[connection signal="open_settings" from="CanvasLayer/Menu" to="." method="_on_Menu_open_settings"]
[connection signal="quit_game" from="CanvasLayer/Menu" to="." method="_on_Menu_quit_game"]
[connection signal="start_game" from="CanvasLayer/Menu" to="." method="_on_Menu_start_game"]
